<resources>
    <string name="app_name">Farmr</string>
    <string name="category_ach">Shifts</string>

    <string name="add_item_title">Add Shift</string>
    <string name="edit_item_title">Edit Shift</string>
    <string name="insert_item_failed">failed to insert Shift</string>
    <string name="insert_item_successful">Shift successfully added</string>
    <string name="update_item_failed">Update Failed</string>
    <string name="update_item_successful">Update Successful</string>
    <string name="add">Add Shift</string>
    <string name="insert">Insert Dummy Data</string>
    <string name="delete">Delete All</string>
    <string name="filter">Filter Data</string>
    <string name="clear">Clear Filter</string>
    <string name="title_activity_filter_data">Filter Data</string>

    <string name="hourly">Hourly</string>
    <string name="pr">Piece Rate</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="export">Export Data</string>
    <string name="sort">Sort</string>

    <string name="admob_unit_id">ca-app-pub-3406791512187471/7557456476</string>
    <string name="banner_home_footer">ca-app-pub-3406791512187471~9541579845</string>

    <string name="help">Help &amp; Support</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="further_info_title">Shift Details</string>
    <string name="insert_break_in_minutes">insert break in minutes</string>
    <string name="break_res">Break</string>
    <string name="hours_symbol">h</string>
    <string name="minutes_symbol">m</string>
    <string name="piece_symbol">pcs</string>
    <string name="pound_sign">£</string>
    <string name="delete_shift">Delete shift</string>
    <string name="update_shift">Update Shift</string>
    <string name="fab">Floating action button</string>
    <string name="text_label_1">Shifts</string>
    <string name="text_label_2">Calendar</string>
</resources>
