<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Clicking on a shift will load up further details. Long click will display the option to delete the selected shift." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/info" />
            </FrameLayout>

            <TextView
                android:id="@+id/timeOutEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:focusable="false"
                android:text="This displays a summary of current (filtered or unfiltered) shifts." />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:text="@string/filter"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:text="In this activity you can specify the parameters to filter data in the main screen. You can filter the shifts by the location name, dates and type of shift (Hourly or Piece rate).
If filtering by name - you can search by only part of the name, does not have to be full.
If filtering by date - if you leave the 'select date from' option empty it will default to the earliest date of shift. If you leave the 'select date to' option empty it will default to todays date." />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/units_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:text="This will clear any current filters applied and load all shifts." />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:text="@string/export"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:text="This will take your current selection of shifts (filtered of unfiltered) in its current sorting order and export the data to and excel file which will open up the sharing options (to share via email or other). The excel file is stored on your device in the shifttracker folder on your storage." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:text="@string/sort"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:text="Sort your shifts by order of it being added, date of shift or by name in an ascending and descending order." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:text="This will remove all the shifts you have currently saved. This cannot be undone so be sure if you are to delete all data." />
        </LinearLayout>
    </LinearLayout>
</ScrollView>